# Solugen-Assignment

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
context/: assignment.md
data/: README.md
data/processed/: bbc_politics_news_under29900.jsonl  bbc_politics_news_under29900.meta.json
scripts/: describe_processed_dataset.py  prepare_bbc_dataset.py
src/solugen_assignment/api/: main.py  models.py  retrieval.py
src/solugen_assignment/api/static/: index.html
